--- a/javascript/javascript2/week1/index.html
+++ b/javascript/javascript2/week1/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <h2 id="generator">Spirit animal name generator</h2>
-    <input type="text" id="input" placeholder="Write your name here..."><button id="btn">Create</button>
+    <form>
+        <input type="text" id="input" placeholder="Write your name here..."><button id="btn">Create</button>
+    </form>
     <p></p>
-
     <script src="week1.js"></script>
 </body>
 </html>
