Button and input added  to Weather app

--- a/javascript/javascript3/week1/Giphy api/index.html
+++ b/javascript/javascript3/week1/Giphy api/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Javascript3 week1</title>
+    <title>Javascript3 week1 - Giphy api</title>
 </head>
 <body>
 
