Displayed the data in the Weather app

--- a/javascript/javascript3/week1/Weather app/index.html
+++ b/javascript/javascript3/week1/Weather app/index.html
@@ -6,13 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<form id="form">
-    <label>
-        <input id="city-value" placeholder="Write here a city name..." required>
-    </label>
-    <button id="btn" type="submit">Search</button>
-</form>
-
+<div id="wrapper">
+    <form id="form">
+        <label>
+            <input id="city-value" placeholder="Write here a city name..." required>
+        </label>
+        <button id="btn" type="submit">Search</button>
+    </form>
+    <ul id="weather"></ul>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
